--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.13.0",
     "reflect-metadata": "^0.2.2",
     "typeorm": "^0.3.21"
   },
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.8",
-    "@types/express": "^5.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.13.5",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.1",
