--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,10 @@
     ]
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.21",
     "eslint-config-react-app": "^7.0.1",
-    "prettier": "^3.5.3"
+    "postcss": "^8.5.6",
+    "prettier": "^3.5.3",
+    "tailwindcss": "^4.1.14"
   }
 }
